--- a/GoSwitch.CustomerTools.Web/Views/Account/Register.cshtml
+++ b/GoSwitch.CustomerTools.Web/Views/Account/Register.cshtml
@@ -41,7 +41,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.CallCenterID, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("CallCenters", (SelectList)ViewBag.CallCenters, " ")
+            @Html.DropDownListFor(m=>m.CallCenterID, (SelectList)ViewBag.CallCenters, " ", htmlAttributes: new { @class = "form-control", id = "ddlCallCenter" })
             @*@Html.TextBoxFor(m => m.CallCenterID, new { @class = "form-control" })*@
         </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="form-group">
         @Html.LabelFor(m=>m.UserRoles, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
+            @Html.DropDownListFor(m=>m.UserRoles, (SelectList)ViewBag.RoleNames, " ", htmlAttributes: new { @class = "form-control", id = "ddlUserRoles" })
         </div>
     </div>
 
